fix(grid): added grid-gap property
Safari has some issues with the gap property, so I replace it with grid-gap.

--- a/css/main.css
+++ b/css/main.css
@@ -380,7 +380,7 @@ input[type=submit] {
 .overview-container {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1.5rem 2rem;
+  grid-gap: 1.5rem 2rem;
   /* mixin mq */
   /* end mixin mq */
   /* mixin mq */
