--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -34,7 +34,7 @@
 .overview-container {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1.5rem 2rem;
+  grid-gap: 1.5rem 2rem;
 
   @include mq($desktop-width, up) {
     grid-template-columns: repeat(4, 1fr);
